--- a/ResistanceExample.html
+++ b/ResistanceExample.html
@@ -42,27 +42,27 @@
 <TABLE>
    <TR>
       <TD WIDTH=75% ALIGN=CENTER> First, recognize the series and parallel resistors in this circuit. Start by reducing resistors A and B into an equivalent resistance:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/RAB.png"  HEIGHT="50px" /><br><br></TD>
+      <TD WIDTH=25% ALIGN=CENTER><img src="RAB.png"  HEIGHT="50px" /><br><br></TD>
    </TR>
     <TR>
       <TD WIDTH=75% ALIGN=CENTER>Next, reduce the parallel resistors C and D:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/RCD.png"  HEIGHT="100px" /><br><br></TD>
+      <TD WIDTH=25% ALIGN=CENTER><img src="RCD.png"  HEIGHT="100px" /><br><br></TD>
    </TR>
    <TR>
       <TD WIDTH=75% ALIGN=CENTER>Third, reduce series resistors E, F and G:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/REFG.png"  HEIGHT="50px" /><br><br></TD>
+      <TD WIDTH=25% ALIGN=CENTER><img src="REFG.png"  HEIGHT="50px" /><br><br></TD>
    </TR> 	
    <TR>
       <TD WIDTH=75% ALIGN=CENTER>The new configuration would look like this:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/Simplified.png"  HEIGHT="150px" /><br><br></TD>
+      <TD WIDTH=25% ALIGN=CENTER><img src="Simplified.png"  HEIGHT="150px" /><br><br></TD>
    </TR> 
    <TR>
       <TD WIDTH=75% ALIGN=CENTER>Now, solve RCD and REFG which are in parallel:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/RCG.png"  HEIGHT="75px" /><br><br></TD>
+      <TD WIDTH=25% ALIGN=CENTER><img src="RCG.png"  HEIGHT="75px" /><br><br></TD>
    </TR>
    <TR>
       <TD WIDTH=75% ALIGN=CENTER>Finally, solve the equation by adding the equivalent resistances since they are in series:</TD>
-      <TD WIDTH=25 ALIGN=CENTER><img src="Circuit_Pictures/RTotal.png"  HEIGHT="50px" /><br></TD>
+      <TD WIDTH=25 ALIGN=CENTER><img src="RTotal.png"  HEIGHT="50px" /><br></TD>
    </TR>
 </TABLE>
 
